--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1 class="h3 mb-1">Tableau de bord </h1>
         <p class="text-secondary mb-4">Suivi des performances, objectifs et feedbacks</p>
 
-<div class="row g-3 mb-4">
+    <div class="row g-3 mb-4">
 
   <div class="col-12 col-md-6 col-lg-3">
     <div class="card shadow-sm h-100">
@@ -87,7 +87,7 @@
 
                     <div class="col-12 col-md-5">
                         <label for="form-label">Rechercher</label>
-                        <input type="text" class="form-control" placeholder="Nom, poste, département...">
+                        <input type="text" class="form-control" placeholder="Nom, poste, ...">
                     </div>
 
                     <div class="col-6 col-md-3">
@@ -107,6 +107,7 @@
                             <option selected>Tous</option>
                             <option>Ok</option>
                             <option>Attention</option>
+                            <option>Faible</option>
                         </select>
                     </div>
 
@@ -122,21 +123,22 @@
 
              <span id="commentaire"></span>
 
-            <div class="card-header bg-white d-flex justify-content-between align-items-center" id="employe"  >
+            <div class="card-header bg-white" id="employe"  >
                 <span class="fw-semibold">Liste des employés</span>
-                <span class="small text-secondary">4 employés</span>
+                <!-- <span class="small text-secondary">4 employés</span> -->
             </div>
 
             <div class="table-responsive">
                 <table class="table table-hover align-middle mb-0">
-                    <thead class="table-light">
+                    <thead>
                         <tr>
                             <th>Employé</th>
-                            <th>Poste</th>
-                            <th>Département</th>
+                            <th class="text-center">Poste</th>
+                            <th class="text-center">Filière</th>
                             <th>Performance</th>
-                            <th>Objectifs</th>
-                            <th class="text-end">Actions</th>
+                            <th class="text-center">Objectifs</th>
+                            <th class="text-center">Statut</th>
+                            <th class="text-end" style="width: 140px;">Actions</th>
                         </tr>
                     </thead>
 
@@ -197,7 +199,7 @@
                               <div class="fw-semibold">Madara Uchiha</div>
                               <div class="small text-secondary">ID: 003</div>
                             </td>
-                            <td>Développeuse</td>
+                            <td>Développeur</td>
                             <td><span class="badge text-bg-light border d-block">Informatique</span></td>
                             <td>⭐⭐⭐⭐⭐</td>
                             <td>
@@ -217,9 +219,9 @@
                               <div class="fw-semibold">Shisui Uchiha</div>
                               <div class="small text-secondary">ID: 004</div>
                             </td>
-                            <td>Développeuse</td>
+                            <td>Développeur</td>
                             <td><span class="badge text-bg-light border d-block">Informatique</span></td>
-                            <td>⭐⭐⭐⭐⭐</td>
+                            <td>⭐</td>
                             <td>
                                 <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="height:20px;">
                                     <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" style="width:40%">40%</div>
